Fixed: Feed on Mobile screen hidden

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,3 +61,9 @@ a {
     bottom: 1vh;
     right: 5vw;
 }
+
+@media (max-width: 1000px) {
+    #feed{
+        display: none;
+    }
+}
